# userbank-core

./: .gitignore  Build_Instructions.md  QUICK_START.md  README-zh.md  README.md  README_DATABASE.md  README_MCP.md  README_SSE.md  REFACTOR_SUMMARY.md  SOLUTION_SUMMARY.md  UPDATE_NOTES.md  build.bat  build.ps1  build.sh  build_main.spec  build_main_sse.spec  config.json  config_manager.py  example_usage.py  main.py  main_sse.py  mcp.py  mcp_config.json  mcp_config_simple.json  personal_profile.db  profile_data.db  pyproject.toml  quick_start.py  requirements.txt  requirements_sse.txt  run_server.py  run_tests.py  sample_personal_profile_export.json  start_mcp_server.bat  start_mcp_server.ps1  start_server.py  system prompt.md  test.py  test_custom_sql.py  test_db.py  (+7 more)
Cognitive Analysis Pipeline/: README.md  system prompt.md
Database/: 0.2.md  PDP.md  __init__.py  database 0.3.md  database new.md  database.md  database.py  结论.md
Prompt Enhancement/: README.md
src/: __init__.py  config.py  database.py  fastmcp_server.py  mcp_tools.py  server.py  test_database.py
test/: test_custom_sql.py
tools/: __init__.py  base.py  database_tools.py  focus_tools.py  goal_tools.py  insight_tools.py  memory_tools.py  methodology_tools.py  persona_tools.py  prediction_tools.py  preference_tools.py  viewpoint_tools.py
