[project]
name = "profile"
version = "0.1.0"
description = "个人画像数据结构分类系统 - 基于FastMCP的数据管理工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
