[project]
name = "userbank-core"
version = "0.1.0"
description = "Core implementation of personal data bank based on MCP protocol - Unified intelligent experience recording engine"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "xuezhirong", email = "xue160709@gmail.com"}
]
maintainers = [
    {name = "xuezhirong", email = "xue160709@gmail.com"}
]
keywords = [
    "mcp", 
    "model-context-protocol", 
    "personal-data", 
    "ai-assistant", 
    "data-management", 
    "sqlite", 
    "privacy", 
    "userbank"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
    "Topic :: Utilities"
]
dependencies = [
    "mcp[cli]>=1.9.1",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "fastmcp>=2.0.0",
    "uvicorn>=0.24.0",
    "starlette>=0.27.0",
    "asyncio-mqtt>=0.13.0",
    "python-dateutil>=2.8.0"
]

[project.urls]
Homepage = "https://github.com/MixLabPro/userbank-core"
Documentation = "https://github.com/MixLabPro/userbank-core#readme"
Repository = "https://github.com/MixLabPro/userbank-core.git"
Issues = "https://github.com/MixLabPro/userbank-core/issues"
Changelog = "https://github.com/MixLabPro/userbank-core/releases"

[project.scripts]
userbank = "main:main"
userbank-sse = "main_sse:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tools",
    "/Database",
    "/README.md",
    "/README-zh.md",
    "/config.json",
    "/requirements.txt"
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["userbank", "tools", "Database"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "-ra"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
